---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 2025-04-07
  Features:
    - Added new lumber mill sound thanks to Cyfagy
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2025-03-28
  Changes:
    - assembling machine 1 now requires electronic circuits
    - assembling machine 2 now requires advanced circuits
    - electrical components are now made in chemical plant
  Bugfixes:
    - Some ores now require an amount of fluid to be mined (before it was 0)
    - automation 2 technology is now reachable
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2025-02-28
  Notes:
    - Tech tree up to metallurgic (tier 2), electromagnetic (tier 2) and cryogenic packs is updated but i have not finished my playthrough. Please give me some feedback in the discussions section if you encounter any issues.
  Features:
    - Added new items
    - Added locale for some late game tech
    - Added polish locale thanks to S3BA
    - Added arc-furnace sound thanks to Cyfagy
  Changes:
    - Updated stack sizes. Be carefull when updating.
    - Car is now unlocked earlier
    - Gas power station is now called incinerator and can burn solids and liquids for capturing the resulting gasses / oxides
    - Fluid burner now vents gases and fluids (before it was called burning)
    - Tech tree updates for reaching production science pack
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2025-02-23
  Changes:
    - Tech tree updates for reaching logistic science pack 2
    - Moved fluid recipes to fluid recipes group
    - Updated some crafting categories
    - Increased crafting speed of some buildings
  Bugfixes:
    - Fixed some missing locale
    - Fixed storage volume of tanks